--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,3 @@
-- Pre-commit hooks
-  - run tests
-  - run credo
-  - build clean
 - set tool versions
 - prod deploy
   - containerize
@@ -16,3 +12,4 @@
 - play/pause
   - play plays our spotify player
   - pause pauses out spotify player
+- commit git hooks and use setup script to customize hooks dir
